--- a/public/css/display_certificate.css
+++ b/public/css/display_certificate.css
@@ -15,7 +15,7 @@
      display: flex;
      flex-wrap: wrap;
  }
- .container{
+ /* .container{
      margin: auto;
      background-color: rgb(243, 225, 228);
      border-radius: 10px;
@@ -27,7 +27,7 @@
      width: 50%;
      min-width: 300px;
     
- }
+ } */
  .certificates{
      display: flex;
      flex-direction: row;
